--- a/src/views/layouts/layout.handlebars
+++ b/src/views/layouts/layout.handlebars
@@ -1,38 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>LoginApp</title>
+	<title>Voting App</title>
 	<link rel="stylesheet" href="/css/bootstrap.css">
 	<link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 	<div class="container">
 	      <header class="header clearfix">
-	        <nav>
-	          <ul class="nav nav-pills float-right">
-				{{#if user}}
-	            <li class="nav-item">
-	              <a class="nav-link" href="/">Dashboard</a>
-	            </li>
-				{{/if}}
+	        <nav class="navbar navbar-expand-sm">
+	          <h3 class="text-muted navbar-brand">Voting App</h3>
+	          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+		          <ul class="navbar-nav ml-auto">
+					{{#if user}}
+		            <li class="nav-item">
+		              <a class="nav-link" href="/">Polls</a>
+		            </li>
+					{{/if}}
 
-	            {{#unless user}}
-	            <li class="nav-item">
-	              <a class="nav-link" href="/users/login">Login</a>
-	            </li>
-	            <li class="nav-item">
-	              <a class="nav-link" href="/users/register">Register</a>
-	            </li>
-	            {{/unless}}
+		            {{#unless user}}
+		            <li class="nav-item">
+		              <a class="nav-link" href="/users/login">Login</a>
+		            </li>
+		            <li class="nav-item">
+		              <a class="nav-link" href="/users/register">Register</a>
+		            </li>
+		            {{/unless}}
 
-	            {{#if user}}
-	            <li class="nav-item">
-	              <a class="nav-link" href="/users/logout">LogOut</a>
-	            </li>
-	            {{/if}}
-	          </ul>
+		            {{#if user}}
+		            <li class="nav-item dropdown">
+		              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	          			{{user.username}}
+	        		  </a>
+		              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+		              	<a href="/polls/user" class="dropdown-item">My Polls</a>
+		              	<a href="/polls/new" class="dropdown-item">New Poll</a>
+		              	<div class="dropdown-divider"></div>
+		              	<a href="/users/logout" class="dropdown-item text-danger">Logout</a>
+		              </div>
+		            </li>
+		            {{/if}}
+		          </ul>
+		        </div>  
 	        </nav>
-	        <h3 class="text-muted">LoginApp</h3>
 	      </header>
 
 	      <main role="main">
@@ -60,5 +70,13 @@
 	      </footer>
 
 	</div> <!-- /container -->
+	<script src="/js/jquery.js"></script>
+	<script src="/js/popper-utils.js"></script>
+	<script src="/js/popper.js"></script>
+	<script src="/js/tooltip.js"></script>
+	<script src="/js/bootstrap.js"></script>
+	{{#if script}}
+	<script src={{script}}></script>
+	{{/if}}
 </body>
 </html>
