--- a/src/views/layouts/layout.handlebars
+++ b/src/views/layouts/layout.handlebars
@@ -29,9 +29,7 @@
 
 		            {{#if user}}
 		            <li class="nav-item dropdown">
-		              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	          			{{user.username}}
-	        		  </a>
+		              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{user.username}}</a>
 		              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 		              	<a href="/polls/user" class="dropdown-item">My Polls</a>
 		              	<a href="/polls/new" class="dropdown-item">New Poll</a>
