--- a/src/views/layouts/layout.handlebars
+++ b/src/views/layouts/layout.handlebars
@@ -11,8 +11,11 @@
 <body>
 	<div class="container">
 	      <header class="header clearfix">
-	        <nav class="navbar navbar-expand-sm">
+	        <nav class="navbar navbar-expand-md navbar-light bg-light">
 	          <h3 class="text-muted navbar-brand">Voting App</h3>
+	          <button class="navbar-toggler navbar-toggler-right btn" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+	              <span class="navbar-toggler-icon"></span>
+	            </button>
 	          <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		          <ul class="navbar-nav ml-auto">
 					{{#if user}}
