--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,4 +1,4 @@
-<h2 class="border border-top-0 border-left-0 border-right-0 border-muted page-header">Polls:</h2>
+<h2 class="border border-top-0 border-left-0 border-right-0 border-muted page-header">Polls</h2>
 <ul id="all-polls-list">
 	{{#each polls}}
 	<li>
