--- a/src/views/layouts/layout.handlebars
+++ b/src/views/layouts/layout.handlebars
@@ -18,11 +18,9 @@
 	            </button>
 	          <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		          <ul class="navbar-nav ml-auto">
-					{{#if user}}
 		            <li class="nav-item">
-		              <a class="nav-link" href="/">Polls</a>
+		              <a class="nav-link" href="/">Home</a>
 		            </li>
-					{{/if}}
 
 		            {{#unless user}}
 		            <li class="nav-item">
