--- a/src/views/layouts/layout.handlebars
+++ b/src/views/layouts/layout.handlebars
@@ -9,44 +9,43 @@
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 </head>
 <body>
+      <header class="header ">
+        <nav class="navbar navbar-expand-md navbar-light bg-light">
+          <h3 class="text-muted navbar-brand">Voting App</h3>
+          <button class="navbar-toggler navbar-toggler-right btn" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+	          <ul class="navbar-nav ml-auto">
+	            <li class="nav-item">
+	              <a class="nav-link" href="/">Home</a>
+	            </li>
+
+	            {{#unless user}}
+	            <li class="nav-item">
+	              <a class="nav-link" href="/users/login">Login</a>
+	            </li>
+	            <li class="nav-item">
+	              <a class="nav-link" href="/users/register">Register</a>
+	            </li>
+	            {{/unless}}
+
+	            {{#if user}}
+	            <li class="nav-item dropdown">
+	              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{user.username}}</a>
+	              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+	              	<a href="/polls/user" class="dropdown-item">My Polls</a>
+	              	<a href="/polls/new" class="dropdown-item">New Poll</a>
+	              	<div class="dropdown-divider"></div>
+	              	<a href="/users/logout" class="dropdown-item text-danger">Logout</a>
+	              </div>
+	            </li>
+	            {{/if}}
+	          </ul>
+	        </div>  
+        </nav>
+      </header>
 	<div class="container">
-	      <header class="header clearfix">
-	        <nav class="navbar navbar-expand-md navbar-light bg-light">
-	          <h3 class="text-muted navbar-brand">Voting App</h3>
-	          <button class="navbar-toggler navbar-toggler-right btn" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-	              <span class="navbar-toggler-icon"></span>
-	            </button>
-	          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-		          <ul class="navbar-nav ml-auto">
-		            <li class="nav-item">
-		              <a class="nav-link" href="/">Home</a>
-		            </li>
-
-		            {{#unless user}}
-		            <li class="nav-item">
-		              <a class="nav-link" href="/users/login">Login</a>
-		            </li>
-		            <li class="nav-item">
-		              <a class="nav-link" href="/users/register">Register</a>
-		            </li>
-		            {{/unless}}
-
-		            {{#if user}}
-		            <li class="nav-item dropdown">
-		              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{user.username}}</a>
-		              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-		              	<a href="/polls/user" class="dropdown-item">My Polls</a>
-		              	<a href="/polls/new" class="dropdown-item">New Poll</a>
-		              	<div class="dropdown-divider"></div>
-		              	<a href="/users/logout" class="dropdown-item text-danger">Logout</a>
-		              </div>
-		            </li>
-		            {{/if}}
-		          </ul>
-		        </div>  
-	        </nav>
-	      </header>
-
 	      <main role="main">
 	        <div class="row">
 	          <div class="col">
